welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
		recule();recule();recule();recule();recule();recule();
                                                                   ^