welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit: Boolean = false;
	avance();avance();avance();avance();avance();avance();
		if (vuBiscuit){
			vuBiscuit;
			return true;
			
		}else{
			vuBiscuit;
			return false ;
		}
		recule();recule();recule();recule();recule();recule();
		
	}

	



